--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -2,3 +2,16 @@
     IMPORT BOOTSTRAP
 -------------------*/
 @import "/node_modules/bootstrap/scss/bootstrap.scss";
+
+/*-------------------
+    TYPOGRAPHY
+-------------------*/
+
+@import url("https://fonts.googleapis.com/css2?family=Alexandria:wght@300;400;500;800&display=swap");
+body {
+  font-family: "Alexandria", sans-serif;
+  font-weight: 300;
+  h4 {
+    font-weight: 500;
+  }
+}
